add miele vacuum cleaner, and basic code flow in main method

--- a/build.gradle
+++ b/build.gradle
@@ -12,6 +12,9 @@ repositories {
 dependencies {
     testImplementation platform('org.junit:junit-bom:5.10.0')
     testImplementation 'org.junit.jupiter:junit-jupiter'
+
+    implementation 'org.seleniumhq.selenium:selenium-java:4.25.0'
+    implementation 'com.fasterxml.jackson.core:jackson-databind:2.0.1'
 }
 
 test {
