--- a/build.gradle
+++ b/build.gradle
@@ -14,7 +14,14 @@ dependencies {
     testImplementation 'org.junit.jupiter:junit-jupiter'
 
     implementation 'org.seleniumhq.selenium:selenium-java:4.25.0'
-    implementation 'com.fasterxml.jackson.core:jackson-databind:2.0.1'
+    implementation 'com.fasterxml.jackson.core:jackson-databind:2.13.4.2'
+
+    annotationProcessor("io.ebean:querybean-generator:12.6.5")
+
+    implementation("org.avaje.composite:logback:1.1")
+    implementation("io.ebean:ebean:12.6.5")
+    implementation("io.ebean:ebean-querybean:12.6.5")
+    implementation 'org.postgresql:postgresql:42.7.2'
 }
 
 test {
